force-app/main/default/objects/Compte_rendu_rempli__c/Compte_rendu_rempli__c.object-meta.xml
<CustomObject>
    <description>Compte rendu VA/VAP rempli suite à la visite d&#39;un animateur chez un PUDO.</description>
    <label>Compte rendu de visite</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Nom de compte rendu</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comptes rendus de visite</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>