force-app/main/default/objects/Compte_rendu_rempli__c/fields/Autre__c.field-meta.xml
<CustomField>
    <fullName>Autre__c</fullName>
    <description>Champ utilisé lorsque la réponse est &quot;Oui&quot; à la  question &quot;Problème avec le transporteur&quot; et lorsque la réponse est &quot;Autre&quot; à la question &quot;Si OUi, merci de préciser&quot;.</description>
    <label>Autre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>