force-app/main/default/objects/Compte_rendu_rempli__c/fields/Commentaires_divers_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_divers_Pickup__c</fullName>
    <label>Commentaires divers Pickup</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>