force-app/main/default/objects/Compte_rendu_rempli__c/fields/Compte_rendu__c.field-meta.xml
<CustomField>
    <fullName>Compte_rendu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte rendu</label>
    <referenceTo>Compte_rendu__c</referenceTo>
    <relationshipName>Comptes_rendus_remplis</relationshipName>
    <type>Lookup</type>
</CustomField>