force-app/main/default/objects/Compte_rendu_rempli__c/fields/Contact_operationnel_rencontre__c.field-meta.xml
<CustomField>
    <fullName>Contact_operationnel_rencontre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact opérationnel rencontré</label>
    <type>Checkbox</type>
</CustomField>