force-app/main/default/objects/Compte_rendu_rempli__c/fields/Cr_ateur_compte_rendu__c.field-meta.xml
<CustomField>
    <fullName>Cr_ateur_compte_rendu__c</fullName>
    <formula>CreatedBy.Id =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Créateur compte rendu</label>
    <type>Checkbox</type>
</CustomField>