force-app/main/default/objects/Compte_rendu_rempli__c/fields/Date_de_la_visite__c.field-meta.xml
<CustomField>
    <fullName>Date_de_la_visite__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date de la visite</label>
    <type>Date</type>
</CustomField>