force-app/main/default/objects/Compte_rendu_rempli__c/fields/Email_CR__c.field-meta.xml
<CustomField>
    <fullName>Email_CR__c</fullName>
    <description>Email de la personne non présente lors de l&#39;entretien mais intéressée par le compte rendu.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>