force-app/main/default/objects/Compte_rendu_rempli__c/fields/Email_du_contact_operationnel__c.field-meta.xml
<CustomField>
    <fullName>Email_du_contact_operationnel__c</fullName>
    <label>Email du contact opérationnel</label>
    <type>Email</type>
</CustomField>