force-app/main/default/objects/Compte_rendu_rempli__c/fields/Email_du_responsable_magasin__c.field-meta.xml
<CustomField>
    <fullName>Email_du_responsable_magasin__c</fullName>
    <label>Email du responsable magasin</label>
    <type>Email</type>
</CustomField>