force-app/main/default/objects/Compte_rendu_rempli__c/fields/Envoi_email__c.field-meta.xml
<CustomField>
    <fullName>Envoi_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envoi email</label>
    <type>Checkbox</type>
</CustomField>