force-app/main/default/objects/Compte_rendu_rempli__c/fields/Hauteur__c.field-meta.xml
<CustomField>
    <fullName>Hauteur__c</fullName>
    <label>Hauteur</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>