force-app/main/default/objects/Compte_rendu_rempli__c/fields/Interrompu__c.field-meta.xml
<CustomField>
    <fullName>Interrompu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interrompu</label>
    <type>Checkbox</type>
</CustomField>