force-app/main/default/objects/Compte_rendu_rempli__c/fields/Largeur__c.field-meta.xml
<CustomField>
    <fullName>Largeur__c</fullName>
    <label>Largeur</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>