force-app/main/default/objects/Compte_rendu_rempli__c/fields/Largeur_initiale1__c.field-meta.xml
<CustomField>
    <fullName>Largeur_initiale1__c</fullName>
    <label>Largeur initiale</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>