force-app/main/default/objects/Compte_rendu_rempli__c/fields/Macroprofil__c.field-meta.xml
<CustomField>
    <fullName>Macroprofil__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Macroprofil</label>
    <referenceTo>Macroprofil__c</referenceTo>
    <relationshipLabel>Comptes rendus remplis</relationshipLabel>
    <relationshipName>Comptes_rendus_remplis</relationshipName>
    <type>Lookup</type>
</CustomField>