force-app/main/default/objects/Compte_rendu_rempli__c/fields/Motif__c.field-meta.xml
<CustomField>
    <fullName>Motif__c</fullName>
    <description>Si le choix &quot;Autre&quot; est sélectionné dans le champ &quot;Motif d&#39;interruption&quot;, l&#39;utilisateur doit expliquer la raison dans ce champ.</description>
    <label>Motif</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>