force-app/main/default/objects/Compte_rendu_rempli__c/fields/Motif_d_interruption__c.field-meta.xml
<CustomField>
    <fullName>Motif_d_interruption__c</fullName>
    <label>Motif d&#39;interruption</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interrompu__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Le relais est fermé</fullName>
            </value>
            <value>
                <fullName>Le relais ne souhaite pas poursuivre faute de temps</fullName>
            </value>
            <value>
                <fullName>Le responsable magasin ou le contact opérationnel est absent</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>