force-app/main/default/objects/Compte_rendu_rempli__c/fields/Nom_CR__c.field-meta.xml
<CustomField>
    <fullName>Nom_CR__c</fullName>
    <description>Nom de la personne non présente lors de l&#39;entretien mais intéressée par le compte rendu.</description>
    <label>Nom</label>
    <length>100</length>
    <type>Text</type>
</CustomField>