force-app/main/default/objects/Compte_rendu_rempli__c/fields/Nombre_d_etageres__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_etageres__c</fullName>
    <label>Nombre d&#39;étagères</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>