force-app/main/default/objects/Compte_rendu_rempli__c/fields/Notes_de_preparation__c.field-meta.xml
<CustomField>
    <fullName>Notes_de_preparation__c</fullName>
    <label>Notes de préparation</label>
    <type>TextArea</type>
</CustomField>