force-app/main/default/objects/Compte_rendu_rempli__c/fields/Notes_internes__c.field-meta.xml
<CustomField>
    <fullName>Notes_internes__c</fullName>
    <label>Notes internes</label>
    <type>TextArea</type>
</CustomField>