force-app/main/default/objects/Compte_rendu_rempli__c/fields/Numero_de_point_relais__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_point_relais__c</fullName>
    <label>Numéro de point relais</label>
    <length>10</length>
    <type>Text</type>
</CustomField>