force-app/main/default/objects/Compte_rendu_rempli__c/fields/Prenom_CR__c.field-meta.xml
<CustomField>
    <fullName>Prenom_CR__c</fullName>
    <description>Prénom de la personne non présente lors de l&#39;entretien mais intéressée par le compte rendu.</description>
    <label>Prénom</label>
    <length>100</length>
    <type>Text</type>
</CustomField>