force-app/main/default/objects/Compte_rendu_rempli__c/fields/Profondeur__c.field-meta.xml
<CustomField>
    <fullName>Profondeur__c</fullName>
    <label>Profondeur</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>