force-app/main/default/objects/Compte_rendu_rempli__c/fields/Responsable_magasin__c.field-meta.xml
<CustomField>
    <fullName>Responsable_magasin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable magasin</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Compte__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comptes rendus remplis (Responsable magasin)</relationshipLabel>
    <relationshipName>Comptes_rendus_remplis1</relationshipName>
    <type>Lookup</type>
</CustomField>