force-app/main/default/objects/Compte_rendu_rempli__c/fields/Responsable_magasin_rencontre__c.field-meta.xml
<CustomField>
    <fullName>Responsable_magasin_rencontre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Responsable magasin rencontré</label>
    <type>Checkbox</type>
</CustomField>