force-app/main/default/objects/Compte_rendu_rempli__c/fields/Secteurs__c.field-meta.xml
<CustomField>
    <fullName>Secteurs__c</fullName>
    <label>Secteurs</label>
    <length>80</length>
    <type>Text</type>
</CustomField>