force-app/main/default/objects/Compte_rendu_rempli__c/fields/Seuil_contractuel__c.field-meta.xml
<CustomField>
    <fullName>Seuil_contractuel__c</fullName>
    <label>Seuil contractuel</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>