force-app/main/default/objects/Compte_rendu_rempli__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente de traitement</fullName>
            </value>
            <value>
                <fullName>En cours de préparation</fullName>
                <default>true</default>
                <label>En cours de préparation</label>
            </value>
            <value>
                <fullName>En attente de visite</fullName>
                <label>En visite</label>
            </value>
            <value>
                <fullName>Terminé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>