force-app/main/default/objects/Compte_rendu_rempli__c/fields/Tel_fixe_du_contact_operationnel__c.field-meta.xml
<CustomField>
    <fullName>Tel_fixe_du_contact_operationnel__c</fullName>
    <label>Tel. fixe du contact opérationnel</label>
    <type>Phone</type>
</CustomField>