force-app/main/default/objects/Compte_rendu_rempli__c/fields/Tel_fixe_du_responsable_magasin__c.field-meta.xml
<CustomField>
    <fullName>Tel_fixe_du_responsable_magasin__c</fullName>
    <label>Tel. fixe du responsable magasin</label>
    <type>Phone</type>
</CustomField>