force-app/main/default/objects/Compte_rendu_rempli__c/fields/Tel_portable_du_responsable_magasin__c.field-meta.xml
<CustomField>
    <fullName>Tel_portable_du_responsable_magasin__c</fullName>
    <label>Tel. portable du responsable magasin</label>
    <type>Phone</type>
</CustomField>