force-app/main/default/objects/Compte_rendu_rempli__c/fields/Telephone_fixe_CR__c.field-meta.xml
<CustomField>
    <fullName>Telephone_fixe_CR__c</fullName>
    <description>Téléphone fixe de la personne non présente lors de l&#39;entretien mais intéressée par le compte rendu.</description>
    <label>Téléphone fixe</label>
    <type>Phone</type>
</CustomField>