force-app/main/default/objects/Compte_rendu_rempli__c/fields/Termine__c.field-meta.xml
<CustomField>
    <fullName>Termine__c</fullName>
    <formula>ISPICKVAL( Statut__c, &quot;Terminé&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terminé</label>
    <type>Checkbox</type>
</CustomField>