force-app/main/default/objects/Compte_rendu_rempli__c/fields/Type_de_compte_rendu__c.field-meta.xml
<CustomField>
    <fullName>Type_de_compte_rendu__c</fullName>
    <label>Type de compte rendu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VA Standard</fullName>
            </value>
            <value>
                <fullName>VALP</fullName>
            </value>
            <value>
                <fullName>VA Quali</fullName>
            </value>
            <value>
                <fullName>VA Orga</fullName>
            </value>
            <value>
                <fullName>VAP PDA</fullName>
            </value>
            <value>
                <fullName>VAP Seuil</fullName>
            </value>
            <value>
                <fullName>VAP FDA</fullName>
            </value>
            <value>
                <fullName>VAP Injoignable</fullName>
            </value>
            <value>
                <fullName>VAP DA</fullName>
            </value>
            <value>
                <fullName>VAP MEN</fullName>
            </value>
            <value>
                <fullName>VAP VO</fullName>
            </value>
            <value>
                <fullName>VAP QS</fullName>
            </value>
            <value>
                <fullName>VAP Enquête de satisfaction</fullName>
            </value>
            <value>
                <fullName>VAP Enquête de bienvenue</fullName>
            </value>
            <value>
                <fullName>VAP FC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>