force-app/main/default/objects/Compte_rendu_rempli__c/fields/Type_de_visite__c.field-meta.xml
<CustomField>
    <fullName>Type_de_visite__c</fullName>
    <label>Type de visite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>VAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>