force-app/main/default/objects/Compte_rendu_rempli__c/recordTypes/VA.recordType-meta.xml
<RecordType>
    <fullName>VA</fullName>
    <active>true</active>
    <label>VA</label>
</RecordType>