force-app/main/default/objects/Compte_rendu_rempli__c/recordTypes/VAP.recordType-meta.xml
<RecordType>
    <fullName>VAP</fullName>
    <active>true</active>
    <label>VAP</label>
</RecordType>