force-app/main/default/objects/Compte_rendu_rempli__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Statut__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>