force-app/main/default/objects/Compte_rendu_rempli__c/listViews/Mes_comptes_rendus_de_visite_interrompus.listView-meta.xml
<ListView>
    <fullName>Mes_comptes_rendus_de_visite_interrompus</fullName>
    <columns>NAME</columns>
    <columns>Numero_de_point_relais__c</columns>
    <columns>Type_de_visite__c</columns>
    <columns>Type_de_compte_rendu__c</columns>
    <columns>Date_de_la_visite__c</columns>
    <columns>Interrompu__c</columns>
    <columns>Motif_d_interruption__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Terminé</value>
    </filters>
    <filters>
        <field>Interrompu__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Cr_ateur_compte_rendu__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Mes comptes rendus de visite interrompus</label>
    <language>fr</language>
</ListView>